NXP-27225: merge dirty properties received on suggestion op